Contact page is made

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#">Link-x</a></li>
                 <li><a href="#">Link-x</a></li>
                 <li><a href="#">Link-x</a></li>
-                <li><a href="#">Link-x</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li><a href="login.html">Log in</a></li>
                 <li><a href="signout.html">Sign out</a></li>
                 <a style="float: right; padding-right:20px "href="#">LOGO </a>
