--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="#">Link-x</a></li>
                 <li><a href="#">Link-x</a></li>
-                <li><a href="#">Link-x</a></li>
+                <li><a href="nasrati10.html">nasrati-10</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="login.html">Log in</a></li>
                 <li><a href="signout.html">Sign out</a></li>
